[gd_scene load_steps=5 format=3 uid="uid://dfw6lhtoreedx"]

[ext_resource type="Script" path="res://Resources/Enchantments/enchantment_class.gd" id="1_y4w7n"]
[ext_resource type="Texture2D" uid="uid://cibety7q0qo1m" path="res://Resources/Art/Enchantments/dejavu_enchantment.png" id="2_7ftqp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ba3i4"]
size = Vector2(78, 78)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbwe3"]
bg_color = Color(0.688023, 0.596125, 0.233008, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="BaseEnchantment" type="Node2D"]
script = ExtResource("1_y4w7n")

[node name="EnchantmentImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_7ftqp")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ba3i4")

[node name="EnchantmentUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShopPanel" type="Panel" parent="EnchantmentUI"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -37.0
offset_top = 30.0
offset_right = -7.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vbwe3")

[node name="ShopLabel" type="Label" parent="EnchantmentUI/ShopPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="TooltipPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.921569)
self_modulate = Color(1, 1, 1, 0)
z_index = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="TooltipContainer" type="VBoxContainer" parent="TooltipPanel"]
unique_name_in_owner = true
layout_mode = 1
offset_bottom = 4.0

[connection signal="mouse_entered" from="EnchantmentUI" to="." method="_on_enchantment_ui_mouse_entered"]
[connection signal="mouse_exited" from="EnchantmentUI" to="." method="_on_enchantment_ui_mouse_exited"]
